bk_ida/gobmkida/c1/tune_move_ordering
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/tune_move_ordering/src/engine/reading.c:4855:12: error: expected expression
*( _OWORD *)defend_lib_score = *( _OWORD *)params; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/tune_move_ordering/src/engine/reading.c:4855:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)defend_lib_score = *( _OWORD *)params; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/tune_move_ordering/src/engine/reading.c:4857:12: error: expected expression
*( _OWORD *)defend_capture_score = *( _OWORD *)( params + 11); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/tune_move_ordering/src/engine/reading.c:4857:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)defend_capture_score = *( _OWORD *)( params + 11); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/tune_move_ordering/src/engine/reading.c:4859:12: error: expected expression
*( _OWORD *)defend_atari_score = *( _OWORD *)( params + 17); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/tune_move_ordering/src/engine/reading.c:4859:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)defend_atari_score = *( _OWORD *)( params + 17); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/tune_move_ordering/src/engine/reading.c:4861:12: error: expected expression
*( _OWORD *)defend_save_score = *( _OWORD *)( params + 23); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/tune_move_ordering/src/engine/reading.c:4861:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)defend_save_score = *( _OWORD *)( params + 23); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/tune_move_ordering/src/engine/reading.c:4863:12: error: expected expression
*( _OWORD *)attack_string_lib_score = *( _OWORD *)( params + 39); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/tune_move_ordering/src/engine/reading.c:4863:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)attack_string_lib_score = *( _OWORD *)( params + 39); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/tune_move_ordering/src/engine/reading.c:4864:12: error: expected expression
*( _OWORD *)attack_capture_score = *( _OWORD *)( params + 45); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/tune_move_ordering/src/engine/reading.c:4864:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)attack_capture_score = *( _OWORD *)( params + 45); 
   ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/tune_move_ordering/src/engine/reading.c:4866:12: error: expected expression
*( _OWORD *)attack_save_score = *( _OWORD *)( params + 51); 
           ^
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/tune_move_ordering/src/engine/reading.c:4866:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)attack_save_score = *( _OWORD *)( params + 51); 
   ^
14 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/tune_move_ordering/src/obj/1/reading.o] Error 1
